# diacriticize

./: LICENSE  README.md  pyproject.toml
diacriticize/: __init__.py  diacriticize.py
